Update changelog to commit 7852a5e7

--- a/docs/changelog/0.4.0.md
+++ b/docs/changelog/0.4.0.md
@@ -1,5 +1,5 @@
 
-# 0.4.0 (Jan 11, 2021)
+# 0.4.0 (Jan 14, 2021)
 
 We are happy to announce the next major release of Scala Native!
 
@@ -204,11 +204,11 @@ special and language specific casing rules. Further one requires linking impleme
 <tbody>
   <tr>
     <td>Merged PRs</td>
-    <td align="center">196</td>
+    <td align="center">204</td>
   </tr>
   <tr>
     <td>Closed issues</td>
-    <td align="center">191</td>
+    <td align="center">201</td>
   </tr>
     <tr>
     <td>Contributors</td>
@@ -245,9 +245,9 @@ Big thanks to everybody who contributed to this release or reported an issue!
 
 ```
 $ git shortlog -sn --no-merges v0.4.0-M2..v0.4.0
-    61	LeeTibbert
-    53	Wojciech Mazur
-    35	Eric K Richardson
+    64	LeeTibbert
+    56	Wojciech Mazur
+    37	Eric K Richardson
     13	Kirill A. Korinsky
     10	Ergys Dona
      8	Lorenzo Gabriele
@@ -350,6 +350,9 @@ $ git shortlog -sn --no-merges v0.4.0-M2..v0.4.0
 
 
 #### Sbt plugin
+- Fix #1849: Streamline clang version detection
+  [\#2099](https://github.com/scala-native/scala-native/pull/2099)
+  ([ekrich](https://github.com/ekrich))
 - Remove target triple discovery code
   [\#2033](https://github.com/scala-native/scala-native/pull/2033)
   ([ekrich](https://github.com/ekrich))
@@ -394,6 +397,9 @@ $ git shortlog -sn --no-merges v0.4.0-M2..v0.4.0
   ([lolgab](https://github.com/lolgab))
 
 #### Native library
+- Fix 2059:  Remove non-standard fcntl.close() & use proper unistd.close().
+  [\#1633](https://github.com/scala-native/scala-native/pull/1633)
+  ([LeeTibbert](https://github.com/LeeTibbert))
 - Fix #519: Make CSize an unsigned type
   [\#1949](https://github.com/scala-native/scala-native/pull/1949)
   ([WojciechMazur](https://github.com/WojciechMazur))
@@ -436,6 +442,9 @@ $ git shortlog -sn --no-merges v0.4.0-M2..v0.4.0
 
 
 #### Java standard library
+- Partial fix #1023: Port j.u.NavigableMap
+  [\#1893](https://github.com/scala-native/scala-native/pull/1893)
+  ([LeeTibbert](https://github.com/LeeTibbert))
 - Support `java.util.Date` methods using `java.time.Instant`.
   [\#2088](https://github.com/scala-native/scala-native/pull/2088)
   ([WojciechMazur](https://github.com/WojciechMazur))
