--- a/docs/changelog/0.4.0.md
+++ b/docs/changelog/0.4.0.md
@@ -233,7 +233,7 @@ Check out the documentation at [https://scala-native.readthedocs.io/](https://sc
 * Added Native JUnit tests plugin,
 * Allowed for cross compilation using custom target triple
 * In sbt config `NativeConfig` replaces spare set of `NativeX` key settings,
-* Added new Garbage Collector - Concurrent Mark and Pararrell Sweep Garbage Collector, called Commix,
+* Added new Garbage Collector - Concurrent Mark and Parallel Sweep Garbage Collector, called Commix,
 * Java standard library packages `java.time` and `java.text` removed from core repo. Recommended usage of third-party libraries instead,
 * Allowed reflective instantiation by using `@EnableReflectiveInstantiation` annotation,
 * Unicode handling updated to specification 13.0.0,
