Fix errors and change structure according to review. Extend bugfixes list

--- a/docs/changelog/0.4.0.md
+++ b/docs/changelog/0.4.0.md
@@ -1,41 +1,121 @@
 
 # 0.4.0 (Jan 14, 2021)
 
-We are happy to announce the next major release of Scala Native!
+We are happy to announce the release of Scala Native 0.4.0!
 
-Release 0.4.0 brings many changes to Scala Native ecosystem, let's take a look at few of them. 
+Scala Native is an optimizing ahead-of-time compiler and lightweight managed runtime designed specifically for Scala.
+It is developed at the [Scala Center](https://scala.epfl.ch/) and with the help from [VirtusLab](https://virtuslab.com)
+along with contributors from the community.
 
-## Compiler changes
-### Supported Scala version
-The most important change introduced by this release is support for recent Scala versions, that means you're able to work
-with the most recent versions of Scala 2 available at the moment of release - 2.12.12 and 2.13.4. 
-Scala 2.11 is still support, what more it was enhanced by multiple features, i.e. handling of java default methods.
+Check out the documentation at [https://scala-native.readthedocs.io/](https://scala-native.readthedocs.io/en/latest)
+
+## TL;DR
+* **Not backward compatible with previous releases**,
+*`NativeConfig` replaces spare set of `NativeX` key settings,
+* Java standard library packages `java.time` and `java.text` removed from core repo. Recommended usage of third-party libraries instead,
+* `CFuncPtr` is now created by implicit conversion from ordinary `scala.Function`
+* Added Scala 2.12 and 2.13 support,
+* Added Native JUnit tests plugin,
+* Additional C/C++ can be added to compilation pipeline,
+* Allowed for cross compilation using custom target triple
+* Allowed reflective instantiation by using `@EnableReflectiveInstantiation` annotation,
+* Added new Garbage Collector - Concurrent Mark and Parallel Sweep Garbage Collector, called Commix,
+* Known bugs fixed
+
+## Breaking changes
+### Broken backward compatibility
+With this major release we are forced to break backward compatibility with previous releases of Scala Native.
+It means that any library published using version 0.4.0-M2 or older would not be compatible to use with Scala Native 0.4.x and afterwards.
+
+### Removal of `java.time` / `java.text`
+This release comes with removal of `java.time` and `java.text` packages for Scala Native core. This decision was taken
+in order to allow for proper implementation of those modules in third-party library. It's specially important for classes
+like `Locale` that are hard to maintain in Scala Native core repo.
+
+Removal of mentioned modules does not create regression in other definitions as long as they're not using directly or transitively one of removed classes.
+```scala
+val str: String = "Hello Native"
+str.toLowerCase()              // works as before
+str.toLowerCase(Locale.French) // fails while linking if not provided implementation
+```
+
+### `NativeConfig` replaces setting keys 
+The current spare set of `NativeX` setting keys is now deprecated in favor of single `NativeConfig` object.
+
+```scala
+// build.sbt
+nativeConfig ~= {
+  _.withMode(build.Mode.releaseFast)
+   .withGC(build.GC.immix)
+   .withLTO(build.LTO.full)
+   .withOptimize(true)
+   .withCompileOptions(Nil)
+   .withLinkingOptions(Nil)
+}
+```
+Old style settings keys are still respected, but with lower priority than the new config and will be removed at some point in the future.
+In the following example resulting `LTO` setting would be set to `thin`
+```scala
+nativeConfig := nativeConfig.value.withLTO(build.LTO.thin)
+
+nativeLTO := "none"
+```
+
+### CFuncPtr syntax change
+You no longer need to implement the `CFuncPtrN` trait which is now private for Scala Native implementation.
+Instead, you can use an implicit conversion method taking arbitrary `scala.FunctionN` and returning `CFuncPtrN`.
+
+```scala
+type Callback = CFuncPtr1[CInt,Unit]
+def registerCallback(cFn: Callback) = extern
+def fn(n: CInt): Unit = ???
+
+registerCallback(CFuncPtr1.fromScalaFunction(fn))
+registerCallback(fn)
+
+registerCallback{n: CInt => println("hello native")}
+```
+
+It's now also possible to work with an arbitrary pointer and convert it to `CFuncPtrN` that can be called in your Scala code
+or to convert your function to any pointer if your native library needs this.
+
+```scala
+import scala.scalanative.unsafe.Ptr
+val cFnPtr: CFuncPtr0[CInt] = ???
+val fnPtr: Ptr[Byte]    = CFuncPtr.toPtr(cFnPtr)
+val fnFromPtr:       = CFuncPtr.fromPtr[CFuncPtr0[CInt]](fnPtr)
+```
+
+### Other breaking changes:
+* Sbt 0.13.x is no longer supported - upgrade to 1.1.6 or newer.
+* The minimal version of Clang working with Scala Native is now 6.0
+* `CSize` is now unsigned numeral type
+* Usage of signed numeral types for methods expecting `CSize` was deprecated. 
+
+## New features
+
+### Supported Scala versions
+We added support for Scala 2.12.13 and 2.13.4, in addition to the existing support for 2.11.12. 
 
 ### JUnit Native Plugin
-Scala Native now comes with JUnit support out of the box, this means that you can write tests in the same way you would do for a Java project.
-To enable JUnit tests all you will need to do is to add the two following lines to your `build.sbt`.
+Scala Native now comes with JUnit support out of the box, this means that you can write tests in the same way you would do
+for a Scala/JVM or Scala.js project. To enable JUnit tests all you will need to do is to add the two following lines to your `build.sbt`.
 
 ```scala
 addCompilerPlugin("org.scala-native" % "junit-plugin" % SNVersion cross CrossVersion.full)
+libraryDependencies += "org.scala-native" % "junit-runtime" %%% SNVersion % "test"
 ```
-
-### NIR changes
-With this major release we're forced to break backward compatibility with previous versions of SN. 
-It means also means that any library published using version 0.4.0-M2 or older would not be compatible to use now.
-
-We also have managed to fix multiple Native Intermiediete Representation related bugs, i.e the way Strings and Characters 
-were stored or adding class literal allowing us to handle proper caching of `java.lang.Class` instances. 
-Moreover, we are now collecting source code positions in NIR instructions, allowing us to add first class debug support in following releases.
 
 ### Reflective instantiation
 Since this release you are able to reflectively instantiate definitions marked with the `@EnableReflectiveInstantation` annotation.
-It will also make all of its descendants able to be reflectively instantiated. 
-For definitions marked with this annotation Scala Native plugin would generate definitions of static class initializers 
-and invoke them just before the `main` method in your final program. 
-This step would register `LoadableModuleClass` and `InstantiableClass` instances for objects and classes accordingly allowing 
+It will also make all of its descendants able to be reflectively instantiated.
+For definitions marked with this annotation Scala Native plugin would generate definitions of static class initializers
+and invoke them just before the `main` method in your final program.
+This step would register `LoadableModuleClass` and `InstantiableClass` instances for objects and classes accordingly allowing
 them to be accessed later via the provided `scalanative.reflect.Reflect` object methods in your code.
+If you have used Scala.js before, it may seem similar to you, as the new implementation uses exactly the same API.
 
-Scala Native does not support full reflection support, although this feature might fix most of the issues that could occour 
+Scala Native does not support full reflection support, although this feature might fix most of the issues that could occur
 in users code.
 
 ```scala
@@ -62,35 +142,6 @@ for {
   cls <- lookupLoadableModule("x.y.z.SingleFoo")
   obj <- cls.loadModule
 } yield obj // results Some(SingleFoo)
-
-```
-
-### Other
-Multiple name mangling and runtime errors have been fixed. For more details check list of merged PRs
-
-
-## Sbt plugin changes
-### Native Config
-We've decided to deprecate the current spare set of `NativeX` setting keys with single `NativeConfig` object. 
-Existing 
-
-```scala
-// build.sbt
-nativeConfig ~= {
-  _.withMode(build.Mode.releaseFast)
-   .withGC(build.GC.immix)
-   .withLTO(build.LTO.full)
-   .withOptimize(true)
-   .withCompileOptions(Nil)
-   .withLinkingOptions(Nil)
-}
-```
-Old style settings keys are still respected, but with lower priority than the new config and will be removed at some point in the future.
-In the following example resulting `LTO` setting would be set to `thin`
-```scala
-nativeConfig := nativeConfig.value.withLTO(build.LTO.thin)
-
-nativeLTO := "none"
 ```
 
 ### Cross compilation
@@ -135,41 +186,6 @@ object example {
 }
 ```
 
-### Other
-* We've decided to no longer support sbt 0.13.x version - if your build still uses this legacy version you need to upgrade to version  1.1.6 or newer.
-* Failures during the build of multiple projects using common jar were fixed. 
-* The minimal version of Clang working with Scala Native is now 6.0
-* You can also observe lower overall memory usage when compiling and linking.
-
-## Native lib and unsafe package changes
-### CFuncPtr changes
-You no longer need to implement the `CFuncPtrN` trait which is now private for Scala Native implementation.
-Instead, you can use an implicit conversion method taking arbitrary `scala.FunctionN` and returning `CFuncPtrN`.
-
-```scala
-type Callback = CFuncPtr1[CInt,Unit]
-def registerCallback(cFn: Callback) = extern
-def fn(n: CInt): Unit = ???
-
-registerCallback(CFuncPtr1.fromScalaFunction(fn))
-registerCallback(fn)
-
-registerCallback{n: CInt => println("hello native")}
-```
-
-It's now also possible to work with an arbitrary pointer and convert it to `CFuncPtrN` that can be called in your Scala code
-or to convert your function to any pointer if your native library needs this.
-
-```scala
-import scala.scalanative.unsafe.Ptr
-val cFnPtr: CFuncPtr0[CInt] = ???
-val fnPtr: Ptr[Byte]    = CFuncPtr.toPtr(cFnPtr)
-val fnFromPtr:       = CFuncPtr.fromPtr[CFuncPtr0[CInt]](fnPtr)
-```
-
-### Unsigned CSize
-Since 0.4.0 version we are deprecation usage of ignored numeral types for methods expecting CSize which now is of type `ULong`.
-
 ### Commix GC
 This release also adds a new Garbage Collector - Commix, a parallel mark, and concurrent sweep GC, based on the well known Immix GC.
 It reduces GC pause times by utilizing additional processor cores during mark and sweep phases. It was added soon after
@@ -178,66 +194,31 @@ the 0.4.0-M2 release, but was only available via an unofficial snapshot.
 Remember, it **does not** mean Scala Native is starting to officially support multi-threading!
 Commix GC was written in C and uses `pthread` to work. In case if your application needs concurrency support you may try experimental library [scala-native-loop](https://github.com/scala-native/scala-native-loop)
 
-
-## Java standard library changes
-### Removal of java.time / java.text
-This release comes with removal of `java.time` and `java.text` packages for Scala Native core. This decision was taken
-in order to allow for proper implementation of those modules in third-party library. It's specially important for classes
-like `Locale` that are hard to maintain in Scala Native core repo.
-
-Removal of mentioned modules does not create regression in other definitions as long as they're not using directly or transitively one of removed classes.
-```scala
-val str: String = "Hello Native"
-str.toLowerCase()              // works as before
-str.toLowerCase(Locale.French) // fails while linking if not provided implementation
-```
-  
-
-### Unicode specification
-We have updated our `java.lang.String` and `java.lang.Character` to be compatible with Unicode 13.0.0 specification,
-allowing us to replace relatively old standard 6.3.0 used in JDK 8
-Additionally we've implemented missing handling of `java.lang.String.to{Lower, Upper}Case` methods for 
-special and language specific casing rules. Further one requires linking implementation for `Locale`. 
-
-## Summary
-<table>
-<tbody>
-  <tr>
-    <td>Merged PRs</td>
-    <td align="center">204</td>
-  </tr>
-  <tr>
-    <td>Closed issues</td>
-    <td align="center">201</td>
-  </tr>
-    <tr>
-    <td>Contributors</td>
-    <td align="center">15</td>
-  </tr>
-  <tr>
-</tbody>
-</table>
-
-[Full Changelog](https://github.com/scala-native/scala-native/compare/v0.4.0-M2...v0.4.0)
-
-Scala Native is an optimizing ahead-of-time compiler and lightweight managed runtime designed specifically for Scala. 
-It is developed at the [Scala Center](https://scala.epfl.ch/) and with the help from [VirtusLab](https://virtuslab.com)
-along with contributors from the community.
-
-## TL;DR
-
-Check out the documentation at [https://scala-native.readthedocs.io/](https://scala-native.readthedocs.io/en/latest)
-
-* **Not backward compatible with previous releases**,
-* Added Scala 2.12 and 2.13 support,
-* Added Native JUnit tests plugin,
-* Allowed for cross compilation using custom target triple
-* In sbt config `NativeConfig` replaces spare set of `NativeX` key settings,
-* Added new Garbage Collector - Concurrent Mark and Parallel Sweep Garbage Collector, called Commix,
-* Java standard library packages `java.time` and `java.text` removed from core repo. Recommended usage of third-party libraries instead,
-* Allowed reflective instantiation by using `@EnableReflectiveInstantiation` annotation,
-* Unicode handling updated to specification 13.0.0,
-
+## Bugfixes
+* Failures during the build of multiple parallel projects using common jar were fixed,
+* Lowered overall memory usage when compiling and linking,
+* Value classes are now correctly handled in lambda functions,
+* `synchronized` flag in now taken into account when generating methods,
+* Constructors are no longer treated are virtual methods, they're always resolved statically,
+* Generic `CFuncPtr` can be passed as method arguments,
+* Binary operations will no longer with `Nothing` arguments will no longer break compilation,
+* Resolving of public method no longer can result in private method with the same name,
+* Instances of `java.lang.Class` are now cached can be correctly tested using reference equality,
+* Triple-quoted `CString`'s are now correctly escaped,
+* Identifiers starting with digits are now correctly handled,
+* Fixed errors with too many open files after consecutive runs,
+* Fixed crashes when HOME env variable was not set,
+* Boehm GC installed using MacPorts is now supported,
+* Fixed segmentation fault when trying to access current, unlinked directory,
+* `malloc` will now throw `OutOfMemoryError` when it cannot allocate memory,
+* `toCString` & `fromCString` now correctly return null,
+* Fixed errors with not cleared `errno` when using POSIX `readdir`
+* Array operation now throw JVM-compilant `ArrayIndexOutOfBoundsException`,
+* Fix bug with `BufferedInputStream.read()` for values bigger then 0x7f,
+* `Files.walk` accepts non-directory files,
+* Improved IEEE754 specification compliance when parsing strings,
+* Fixed infinite loop in `java.io.RandomAccesFile.readLine`,
+* Added multiple missing `javalib` classes and methods
 
 ## Contributors
 
@@ -246,7 +227,7 @@ Big thanks to everybody who contributed to this release or reported an issue!
 ```
 $ git shortlog -sn --no-merges v0.4.0-M2..v0.4.0
     64	LeeTibbert
-    56	Wojciech Mazur
+    76	Wojciech Mazur
     37	Eric K Richardson
     13	Kirill A. Korinsky
     10	Ergys Dona
@@ -262,7 +243,25 @@ $ git shortlog -sn --no-merges v0.4.0-M2..v0.4.0
      1	jokade
 ```
 
-## Merged PRs
+<table>
+<tbody>
+  <tr>
+    <td>Merged PRs</td>
+    <td align="center">205</td>
+  </tr>
+  <tr>
+    <td>Closed issues</td>
+    <td align="center">202</td>
+  </tr>
+    <tr>
+    <td>Contributors</td>
+    <td align="center">15</td>
+  </tr>
+  <tr>
+</tbody>
+</table>
+
+[Full Changelog](https://github.com/scala-native/scala-native/compare/v0.4.0-M2...v0.4.0)
 
 ### The most impacting merged pull requests:
 #### Compiler
