Address review changes

--- a/docs/changelog/0.4.0.md
+++ b/docs/changelog/0.4.0.md
@@ -11,37 +11,37 @@ Check out the documentation at [https://scala-native.readthedocs.io/](https://sc
 
 ## TL;DR
 * **Not backward compatible with previous releases**,
-*`NativeConfig` replaces spare set of `NativeX` key settings,
-* Java standard library packages `java.time` and `java.text` removed from core repo. Recommended usage of third-party libraries instead,
+* A unique `nativeConfig` setting replaces the set of `nativeX` settings,
+* The partial implementation of the JDK packages `java.time` and `java.text` were removed from core repo. 
+  Third-party libraries such as scala-java-time and scala-java-locales should be used instead,
 * `CFuncPtr` is now created by implicit conversion from ordinary `scala.Function`
 * Added Scala 2.12 and 2.13 support,
-* Added Native JUnit tests plugin,
+* Added support for JUnit,
 * Additional C/C++ can be added to compilation pipeline,
 * Allowed for cross compilation using custom target triple
 * Allowed reflective instantiation by using `@EnableReflectiveInstantiation` annotation,
 * Added new Garbage Collector - Concurrent Mark and Parallel Sweep Garbage Collector, called Commix,
-* Known bugs fixed
+* Various bug fixes
 
 ## Breaking changes
 ### Broken backward compatibility
-With this major release we are forced to break backward compatibility with previous releases of Scala Native.
-It means that any library published using version 0.4.0-M2 or older would not be compatible to use with Scala Native 0.4.x and afterwards.
+Scala Native 0.4.0 breaks backward binary compatibility with previous releases of Scala Native.
+Libraries published using version 0.4.0-M2 or older must be republished for Scala Native 0.4.x.
 
 ### Removal of `java.time` / `java.text`
-This release comes with removal of `java.time` and `java.text` packages for Scala Native core. This decision was taken
-in order to allow for proper implementation of those modules in third-party library. It's specially important for classes
-like `Locale` that are hard to maintain in Scala Native core repo.
+This release removes the partial implementations of the `java.time` and `java.text` packages from Scala Native core.
+This will allow third-party libraries, like `scala-java-time` and `scala-java-locales`, to provide more complete versions thereof.
 
-Removal of mentioned modules does not create regression in other definitions as long as they're not using directly or transitively one of removed classes.
+Using methods that directly or transitively need the removed classes will require an additional dependency on the appropriate third-party library.
+For example:
 ```scala
 val str: String = "Hello Native"
 str.toLowerCase()              // works as before
-str.toLowerCase(Locale.French) // fails while linking if not provided implementation
+str.toLowerCase(Locale.French) // requires scala-java-locales to link
 ```
 
 ### `NativeConfig` replaces setting keys 
-The current spare set of `NativeX` setting keys is now deprecated in favor of single `NativeConfig` object.
-
+The `nativeXyz` setting keys are now deprecated in favor of a single `nativeConfig` setting, which can be used as follows:
 ```scala
 // build.sbt
 nativeConfig ~= {
@@ -53,7 +53,8 @@ nativeConfig ~= {
    .withLinkingOptions(Nil)
 }
 ```
-Old style settings keys are still respected, but with lower priority than the new config and will be removed at some point in the future.
+Old style settings keys are still supported, but they have lower priority than the new config and will be removed 
+at some point in the future.
 In the following example resulting `LTO` setting would be set to `thin`
 ```scala
 nativeConfig := nativeConfig.value.withLTO(build.LTO.thin)
@@ -61,19 +62,19 @@ nativeConfig := nativeConfig.value.withLTO(build.LTO.thin)
 nativeLTO := "none"
 ```
 
-### CFuncPtr syntax change
+### CFuncPtr changes
 You no longer need to implement the `CFuncPtrN` trait which is now private for Scala Native implementation.
 Instead, you can use an implicit conversion method taking arbitrary `scala.FunctionN` and returning `CFuncPtrN`.
 
 ```scala
 type Callback = CFuncPtr1[CInt,Unit]
-def registerCallback(cFn: Callback) = extern
+def registerCallback(cFn: Callback): Unit = extern
 def fn(n: CInt): Unit = ???
 
 registerCallback(CFuncPtr1.fromScalaFunction(fn))
 registerCallback(fn)
 
-registerCallback{n: CInt => println("hello native")}
+registerCallback { (n: CInt) => println("hello native") }
 ```
 
 It's now also possible to work with an arbitrary pointer and convert it to `CFuncPtrN` that can be called in your Scala code
@@ -81,9 +82,9 @@ or to convert your function to any pointer if your native library needs this.
 
 ```scala
 import scala.scalanative.unsafe.Ptr
-val cFnPtr: CFuncPtr0[CInt] = ???
-val fnPtr: Ptr[Byte]    = CFuncPtr.toPtr(cFnPtr)
-val fnFromPtr:       = CFuncPtr.fromPtr[CFuncPtr0[CInt]](fnPtr)
+val cFnPtr: CFuncPtr0[CInt]    = ???
+val fnPtr: Ptr[Byte]           = CFuncPtr.toPtr(cFnPtr)
+val fnFromPtr: CFuncPtr0[CInt] = CFuncPtr.fromPtr[CFuncPtr0[CInt]](fnPtr)
 ```
 
 ### Other breaking changes:
@@ -97,7 +98,7 @@ val fnFromPtr:       = CFuncPtr.fromPtr[CFuncPtr0[CInt]](fnPtr)
 ### Supported Scala versions
 We added support for Scala 2.12.13 and 2.13.4, in addition to the existing support for 2.11.12. 
 
-### JUnit Native Plugin
+### JUnit Support
 Scala Native now comes with JUnit support out of the box, this means that you can write tests in the same way you would do
 for a Scala/JVM or Scala.js project. To enable JUnit tests all you will need to do is to add the two following lines to your `build.sbt`.
 
@@ -107,12 +108,9 @@ libraryDependencies += "org.scala-native" % "junit-runtime" %%% SNVersion % "tes
 ```
 
 ### Reflective instantiation
-Since this release you are able to reflectively instantiate definitions marked with the `@EnableReflectiveInstantation` annotation.
-It will also make all of its descendants able to be reflectively instantiated.
-For definitions marked with this annotation Scala Native plugin would generate definitions of static class initializers
-and invoke them just before the `main` method in your final program.
-This step would register `LoadableModuleClass` and `InstantiableClass` instances for objects and classes accordingly allowing
-them to be accessed later via the provided `scalanative.reflect.Reflect` object methods in your code.
+Since this release you are able to reflectively instantiate definitions marked with the `@EnableReflectiveInstantation` annotation,
+as well as its descendants.
+Annotated classes and modules, having a concrete implementation, can be accessed via the provided `scalanative.reflect.Reflect` API.
 If you have used Scala.js before, it may seem similar to you, as the new implementation uses exactly the same API.
 
 Scala Native does not support full reflection support, although this feature might fix most of the issues that could occur
@@ -122,7 +120,7 @@ in users code.
 package x.y.z
 
 @EnableReflectiveInstantation
-sealed trait ReflectiveFoo {
+trait ReflectiveFoo {
   val value: String = "foo"
 }
 
@@ -133,23 +131,23 @@ case class MultipleFoo(times: Int) extends ReflectiveFoo {
 }
 
 for {
-  cls <- lookupInstantiatableClass("x.y.z.Foo")
+  cls  <- lookupInstantiatableClass("x.y.z.Foo")
   ctor <- cls.getConstructor(classOf[Int])
-  obj <- ctor.newInstance(5)
+  obj  <- ctor.newInstance(5)
 } yield obj // results in Some(new MultipleFoo(5))
 
 for {
   cls <- lookupLoadableModule("x.y.z.SingleFoo")
-  obj <- cls.loadModule
+  obj <- cls.loadModule()
 } yield obj // results Some(SingleFoo)
 ```
 
 ### Cross compilation
-With the latest release you're able to define a custom target for compiler by providing [LLVM style TargetTriple](https://clang.llvm.org/docs/CrossCompilation.html) in your config.
-This change does not change default behaviour of Scala Native sbt plugin, cousing to target host architecture and operating system.
+It is now possible to define a custom target for the compiler by providing an [LLVM-style TargetTriple](https://clang.llvm.org/docs/CrossCompilation.html) in your config.
+The default behavior is still to target the host architecture and operating system.
 
-For example, if you're working on Linux and would like to create perfectly suited assembly for some specific version of MacOS without changing your whole build,
-you can use ad-hoc sbt setting:
+For example, if you're working on Linux and would like to create an executable suitable for MacOS without changing your whole build,
+you can use the following sbt setting::
 ```bash
 sbt 'set nativeConfig ~= {_.withTargetTriple("x86_64-apple-darwin<version>")}' myApp/nativeLink
 ```
@@ -157,13 +155,13 @@ sbt 'set nativeConfig ~= {_.withTargetTriple("x86_64-apple-darwin<version>")}' m
 We consider changing target triple as a feature for advanced users, and cannot promise it would currently work with any possible configuration yet.
 However, the number of supported architectures and operating systems would definitely grow in the future.
 
-> When using Linux / MacOS you can check target triple used in your environment by command `llvm-config --host-target`.
+> When using Linux / MacOS, you can check the target triple used in your environment with the command `llvm-config --host-target`.
 
-### Native sources in build
+### Native sources in the build
 With the 0.4.0 release you're able to put your C/C++ sources in the `resources/scala-native` directory inside your project,
 so they will be linked and compiled inside the SN pipeline.
 
-As an example you can use it to access macro defined constants and functions or to pass `struct`s from the stack to C functions.
+As an example you can use it to access macro-defined constants and functions or to pass `struct`s from the stack to C functions.
 ```c
 // src/resources/scala-native/example.c
 typedef int (*Callback0) (void);
@@ -188,22 +186,21 @@ object example {
 
 ### Commix GC
 This release also adds a new Garbage Collector - Commix, a parallel mark, and concurrent sweep GC, based on the well known Immix GC.
-It reduces GC pause times by utilizing additional processor cores during mark and sweep phases. It was added soon after
-the 0.4.0-M2 release, but was only available via an unofficial snapshot.
+It reduces GC pause times by utilizing additional processor cores during mark and sweep phases.
 
-Remember, it **does not** mean Scala Native is starting to officially support multi-threading!
-Commix GC was written in C and uses `pthread` to work. In case if your application needs concurrency support you may try experimental library [scala-native-loop](https://github.com/scala-native/scala-native-loop)
+While the GC itself will use multiple threads, Scala Native still does not support multi-threading in the application code.
+Commix GC was written in C and uses `pthread` to work. In case your application needs concurrency support, you may try the experimental library [scala-native-loop](https://github.com/scala-native/scala-native-loop)
 
 ## Bugfixes
 * Failures during the build of multiple parallel projects using common jar were fixed,
 * Lowered overall memory usage when compiling and linking,
 * Value classes are now correctly handled in lambda functions,
-* `synchronized` flag in now taken into account when generating methods,
+* The `synchronized` flag in now taken into account when generating methods,
 * Constructors are no longer treated are virtual methods, they're always resolved statically,
 * Generic `CFuncPtr` can be passed as method arguments,
-* Binary operations will no longer with `Nothing` arguments will no longer break compilation,
+* Binary operations with `Nothing` arguments will no longer break compilation,
 * Resolving of public method no longer can result in private method with the same name,
-* Instances of `java.lang.Class` are now cached can be correctly tested using reference equality,
+* Instances of `java.lang.Class` are now cached and can be correctly tested using reference equality,
 * Triple-quoted `CString`'s are now correctly escaped,
 * Identifiers starting with digits are now correctly handled,
 * Fixed errors with too many open files after consecutive runs,
