Fix libraryDependency example, use correct class fqcn for reflection example, fix number of merge PRs

--- a/docs/changelog/0.4.0.md
+++ b/docs/changelog/0.4.0.md
@@ -103,8 +103,8 @@ Scala Native now comes with JUnit support out of the box, this means that you ca
 for a Scala/JVM or Scala.js project. To enable JUnit tests all you will need to do is to add the two following lines to your `build.sbt`.
 
 ```scala
-addCompilerPlugin("org.scala-native" % "junit-plugin" % SNVersion cross CrossVersion.full)
-libraryDependencies += "org.scala-native" % "junit-runtime" %%% SNVersion % "test"
+addCompilerPlugin("org.scala-native" % "junit-plugin" % nativeVersion cross CrossVersion.full)
+libraryDependencies += "org.scala-native" %%% "junit-runtime" % nativeVersion % "test"
 ```
 
 ### Reflective instantiation
@@ -131,7 +131,7 @@ case class MultipleFoo(times: Int) extends ReflectiveFoo {
 }
 
 for {
-  cls  <- lookupInstantiatableClass("x.y.z.Foo")
+  cls  <- lookupInstantiatableClass("x.y.z.MultipleFoo")
   ctor <- cls.getConstructor(classOf[Int])
   obj  <- ctor.newInstance(5)
 } yield obj // results in Some(new MultipleFoo(5))
@@ -224,7 +224,7 @@ Big thanks to everybody who contributed to this release or reported an issue!
 ```
 $ git shortlog -sn --no-merges v0.4.0-M2..v0.4.0
     64	LeeTibbert
-    76	Wojciech Mazur
+    57	Wojciech Mazur
     37	Eric K Richardson
     13	Kirill A. Korinsky
     10	Ergys Dona
