Fix typos and update notes

--- a/docs/changelog/0.4.1.md
+++ b/docs/changelog/0.4.1.md
@@ -14,6 +14,28 @@ We're happy to announce the release of Scala Native v0.4.1!
 * Improvements to Java stdlib implementation
 * Multiple bugfixes
 
+<table>
+<tbody>
+  <tr>
+    <td>Commits since last release</td>
+    <td align="center">158</td>
+  </tr>
+  <tr>
+    <td>Merged PRs</td>
+    <td align="center">158</td>
+  <tr>
+    <td>Closed issues</td>
+    <td align="center">113</td>
+  </tr>
+  </tr>
+    <tr>
+    <td>Contributors</td>
+    <td align="center">15</td>
+  </tr>
+</tbody>
+</table>
+
+## Most impacting changes
 ### Windows support
 This release of Scala Native brings native support for compilation and running 
 Scala Native applications on Windows. For instructions how to setup your environment 
@@ -22,11 +44,11 @@ check out our [documentation](https://scala-native.readthedocs.io/en/latest/user
 ### Linktime resolved expressions
 To make Windows support possible we introduced a new way of interacting with native code,
 especially with OS native functions that might not be existing on different platforms.
-Our solution to this problem is introduction of linktime resolved expressions - special 
-values using `@scala.scalanative.unsafe.resolvedAtLinktime` annotation. Each of such a values
-is provides a stub in NIR, which would be replaced when performing linking, based on 
-values defined in `scala.scalanative.build.NativeConfig`. 
-Currently, linktime list of linktime resolve expressions is limited and users cannot create new ones, but it might change in the future
+Our solution to this problem is the introduction of linktime resolved expressions - special 
+values using `@scala.scalanative.unsafe.resolvedAtLinktime` annotation. 
+Each of such a value provides a stub in NIR (Native Intermediate Representation),
+which would be replaced when performing linking, based on values defined in `scala.scalanative.build.NativeConfig`. 
+Currently, the list of linktime resolved expressions is limited and users cannot create new ones, but it might change in the future.
 
 ```scala
 // Example of linktime resolved expressions definition
@@ -39,14 +61,15 @@ object LinktimeInfo {
 }
 ```
 
-In case of usage `if` condition containg linktime resolved value, at the time of performing 
-linking of NIR files, we can replace condition with simple boolean value `true/false`.
+In case of usage of `if` condition containg linktime resolved value,
+at the time of performing linking of NIR files, whole condition expression 
+would be replaced with constant boolean value equal to `true` or `false`.
 At this point we can dead-code eliminate never taken branch. 
 This feature is crucial for cross compilation on different platforms - if we eliminate
 branch containing call to OS specific function it would be never used, and though we would 
-not need its defintion when building.  
+not need its definition when building.
 
-On the snippet bellow you can see example of linktime conditional branching. Depending on
+In the snippet bellow you can see an example of linktime conditional branching. Depending on
 Native Config settings only one of the if condition branch would be taken, the second one
 would be always discarded. 
 
@@ -54,14 +77,14 @@ would be always discarded.
 import scala.scalanative.meta.LinktimeInfo.isWindows
 import scala.scalanative.unsafe._
 
-val attrs = GetFileAttributesW(toCWideStringUTF16LE(properPath)) 
 def isDirectory(path: CString): Boolean = {
   if (isWindows) {
     val flag = FILE_ATTRIBUTE_DIRECTORY
-    GetFileAttributesW(path) & FILE_ATTRIBUTE_DIRECTORY != 0 
+    GetFileAttributesA(path) & FILE_ATTRIBUTE_DIRECTORY != 0 
   } else {
-    def accessModes(): CInt = ???
-    stat.S_ISDIR(accessMode(path)) != 0
+    val buf = alloc[stat.stat]
+    stat.stat(path, buf)
+    stat.S_ISDIR(buf._13) != 0
   }
 }
 ```
@@ -71,34 +94,9 @@ The next new feature is partial support for Weak References, however usage of th
 is only possible when using Immix or Commix GC - they have beed adopted to handle proper marking
 of WeakReference objects. Other Garbage Collector implementations, like external Boehm GC do not
 contain mechanisms allowing to perform WeakReference semantics. 
-To check at runtime does you GC supports weak references you can use dedicated linktime resolved 
-value `LinktimeInfo.isWeakReferenceSupported`
+To check at runtime if your current GC supports weak references 
+you can use the dedicated linktime resolved value `LinktimeInfo.isWeakReferenceSupported`
 
-
-<table>
-<tbody>
-  <tr>
-    <td>Commits since last release</td>
-    <td align="center">158</td>
-  </tr>
-  <tr>
-    <td>Merged PRs</td>
-    <td align="center">158</td>
-  </tr>
-    <tr>
-    <td>Contributors</td>
-    <td align="center">15</td>
-  </tr>
-  <tr>
-    <td>Closed issues</td>
-    <td align="center"></td>
-  </tr>
-  <tr>
-    <td>New features</td>
-    <td align="center"></td>
-  </tr>
-</tbody>
-</table>
 
 ## Contributors
 
@@ -106,7 +104,7 @@ Big thanks to everybody who contributed to this release or reported an issue!
 
 ```
 $ git shortlog -sn --no-merges v0.4.0..v0.4.1
- 56	Wojciech MazurWindows
+    56	Wojciech Mazur
     40	LeeTibbert
     19	Jan Chyb
     18	Eric K Richardson
@@ -131,7 +129,7 @@ $ git shortlog -sn --no-merges v0.4.0..v0.4.1
 
 **Merged pull requests:**
 
-# Scala compiler plugin
+### Scala compiler plugin
 - Fix: #2187 Match with guards does not compile
   [\#2188](https://github.com/scala-native/scala-native/pull/2188)
   ([WojciechMazur](https://github.com/WojciechMazur))
@@ -429,7 +427,9 @@ $ git shortlog -sn --no-merges v0.4.0..v0.4.1
 - Add a default signal handler to `TestMain`
   [\#2338](https://github.com/scala-native/scala-native/pull/2338)
   ([jchyb](https://github.com/jchyb))
-
+- Restore `scala.collection` optimization overrides as patch files
+  [\#2168](https://github.com/scala-native/scala-native/pull/2168)
+  ([WojciechMazur](https://github.com/WojciechMazur))
 - Allow testing against Scala partest and JUnit tests
   [\#2154](https://github.com/scala-native/scala-native/pull/2154)
   ([WojciechMazur](https://github.com/WojciechMazur))
@@ -442,8 +442,3 @@ $ git shortlog -sn --no-merges v0.4.0..v0.4.1
 - Allow scala-native to be used with FreeBSD
   [\#2148](https://github.com/scala-native/scala-native/pull/2148)
   ([alexdupre](https://github.com/alexdupre))
-
-
-
-
-
